@@ -16,25 +16,25 @@ import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.TreeMap;
 import java.util.TreeSet;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.function.Function;
 import java.util.logging.Level;
 import java.util.stream.Collectors;
-import javax.json.Json;
-import javax.json.stream.JsonGenerator;
 
-
+import com.fasterxml.jackson.core.JsonFactory;
+import com.fasterxml.jackson.core.JsonGenerator;
 import com.mongodb.client.MongoClient;
 import com.mongodb.client.MongoClients;
 import com.mongodb.client.MongoCollection;
 import com.mongodb.client.MongoCursor;
 import com.mongodb.client.MongoDatabase;
 import org.bson.Document;
-
-import static org.bson.codecs.configuration.CodecRegistries.fromProviders;
-import static org.bson.codecs.configuration.CodecRegistries.fromRegistries;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class genReef35 {
 
@@ -106,14 +106,10 @@ public class genReef35 {
             famCat.put(id, new Category(id, cat, altType, altCat));
         }
 
-        Category getCategory(String id) {
-            return famCat.get(id);
-        }
-
         List<String> getFamily(String cat) {
             List<String> ret;
-            ret = famCat.values().stream().filter(x -> x.cat().equals(cat)).map(x -> x.id).collect(Collectors.toList());
-            Collections.sort(ret);
+            ret = famCat.values().stream().filter(x -> x.cat().equals(cat)).sorted(Comparator.comparing(Category::altCat).thenComparing(Category::id))
+                    .map(x -> x.id).collect(Collectors.toList());
             return ret;
         }
 
@@ -122,7 +118,7 @@ public class genReef35 {
         }
 
         List<String> getGenus(String family) {
-            return genusFam.values().stream().sorted(Comparator.comparing(Genus::id)).filter(x -> x.fullFamily().equals(family)).map(x -> x.id).collect(Collectors.toList());
+            return genusFam.values().stream().filter(x -> x.fullFamily().equals(family)).sorted(Comparator.comparing(Genus::id)).map(x -> x.id).collect(Collectors.toList());
         }
 
         String getFamilyForGenus(String genus) {
@@ -142,8 +138,8 @@ public class genReef35 {
 
         String[] getAltCatForGenus(String genus) {
             var ret = new String[2];
-            ret[0] = famCat.get(getFamilyForGenus(genus)).altType();
-            ret[1] = famCat.get(getFamilyForGenus(genus)).altCat();
+            ret[0] = famCat.get(getFamilyForGenus(genus)).altCat();
+            ret[1] = famCat.get(getFamilyForGenus(genus)).altType();
             return ret;
         }
 
@@ -169,7 +165,7 @@ public class genReef35 {
             return dispNames.size();
         }
 
-        protected String getDispName(int i) {
+        String getDispName(int i) {
             if(dispNames == null)
                 return name;
             return dispNames.get(i);
@@ -184,12 +180,24 @@ public class genReef35 {
             List<photo> p = new ArrayList<>();
             for(Document doc : photos)
                 p.add(new photo(doc.getInteger("id"), doc.getString("location"), doc.getString("type"), doc.getString("comment")));
+            p = sortPhotos(p, thumbs);
             if(depth != null) {
                 long sd = depthmetric(Integer.parseInt(depth.split("-")[0]));
                 long ed = depthmetric(Integer.parseInt(depth.split("-")[1]));
                 depth = depth + " ft. (" + sd + "-" + ed + " m)";
             }
             species.put(id, new Species(id, name, sciName, size, depth, endemic, dist, p, thumbs, synonyms, aka, note, dispNames, update));
+        }
+
+        private List<photo> sortPhotos(List<photo> ph, List<Integer> thumbs) {
+            List<photo> p = new ArrayList<>();
+            thumbs.forEach(n -> {
+                var x = ph.stream().filter(r -> r.id == n).findAny().orElseThrow();
+                p.add(x);
+                ph.remove(x);
+            });
+            p.addAll(ph.stream().sorted(Comparator.comparingInt(photo::id).reversed()).toList());
+            return p;
         }
 
         Collection<Species> getAllSpecies() {
@@ -220,7 +228,7 @@ public class genReef35 {
 
         List<String> getSpeciesNameFromCat(String category) {
             return genus_classification.getFamily(category).stream().
-                    flatMap(s -> genus_classification.getGenus(s).stream()).collect(Collectors.toList())
+                    flatMap(s -> genus_classification.getGenus(s).stream()).toList()
                     .stream().flatMap(s -> species_collection.getSpeciesFromGenus(s).stream()).collect(Collectors.toList());
         }
 
@@ -232,6 +240,19 @@ public class genReef35 {
             return species.values().stream().filter(s -> s.update != null).sorted(Comparator.comparing(Species::update, Comparator.reverseOrder())).collect(Collectors.toList());
         }
 
+        void validate() {
+            species.values().stream().map(Species::sciName).collect(Collectors.groupingBy(Function.identity(), Collectors.counting()))
+                    .forEach((k,v) -> {
+                        if(k.isEmpty())
+                            return;
+                        if(v > 1L) {
+                            System.out.println(k + " - " + v);
+                            throw new RuntimeException("DUPLICATE SCINAME");
+                        }
+                    });
+
+        }
+
     }
 
     String basepathIndexAll = null;
@@ -239,10 +260,12 @@ public class genReef35 {
     protected int numPhotos = 0;
     protected java.util.ArrayList<page> pageList = new java.util.ArrayList<>();
 
-    final String[] reefId = {"all", "carib", "indopac", "hawaii", "keys", "baja"};
-    final String[] reefName = {"Tropical Reefs", "Caribbean Reefs", "Tropical Pacific Reefs", "South Florida Reefs", "Hawaii Reefs", "Eastern Pacific Reefs"};
-    final String[] preReefName = {"", "Florida, Bahamas &", "", "", "", ""};
-    final String[] reefMenu = {"Worldwide", "Caribbean", "Pacific", "South Florida", "Hawaii", "Eastern Pacific"};
+    //final String[] reefId = {"all", "carib", "indopac", "hawaii", "keys", "baja"};
+    final String[] reefName = {"Tropical Reefs", "Caribbean Reefs", "Tropical Pacific Reefs", "South Florida Reefs", "Hawaii Reefs", "Eastern Pacific Reefs", "French Polynesia"};
+    final String[] preReefName = {"", "Florida, Bahamas &", "", "", "", "", ""};
+    final String[] reefMenu = {"Worldwide", "Caribbean", "Pacific", "South Florida", "Hawaii", "Eastern Pacific", "French Polynesia"};
+
+    static final int numRegion = 7;
 
    // int __count = 0;
 
@@ -283,11 +306,13 @@ public class genReef35 {
             String basepathIndexCarib = path + "/carib";
             String basepathIndexKeys = path + "/keys";
             String basepathIndexBaja = path + "/baja";
+            String basepathIndexPolynesia = path + "/fp";
             String[] hearderAll = {"banner1", "banner2", "banner3"};
             String[] hearderCarib = {"banner1", "banner3"};
             String[] hearderIndopac = {"banner2"};
             String[] hearderKeys = {"banner1", "banner3"};
             String[] hearderHawaii = {"banner2"};
+            String[] hearderPolynesia = {"banner2"};
 
             this.analytics = analytics;
             System.out.println("================= Site " + path + " =================");
@@ -309,6 +334,9 @@ public class genReef35 {
             System.out.println("Processing Baja:");
             int baja = process("/config/reeflistbaja4.xml", basepathIndexBaja, 5, hearderHawaii);
             int baja_pics = numPhotos;
+            System.out.println("Processing Polynesia:");
+            int poly = process("/config/reeflisthawaii4.xml", basepathIndexPolynesia, 6, hearderPolynesia);
+            int poly_pics = numPhotos;
 
             String outString = readFile("about.html");
             outString = outString.replace("__ALL__", Integer.toString(all));
@@ -338,7 +366,7 @@ public class genReef35 {
             outString = outString.replace("__INDOPAC__", Integer.toString(indopac));
             outString = outString.replace("__KEYS__", Integer.toString(keys));
             outString = outString.replace("__HAWAII__", Integer.toString(hawaii));
-            outString = outString.replace("__BAJA__", Integer.toString(hawaii));
+            outString = outString.replace("__BAJA__", Integer.toString(baja));
 
             if(analytics) {
                 outString = outString.replace("__ANALYTICS__", readFile("analytics.xml"));
@@ -401,7 +429,12 @@ public class genReef35 {
 //                    .codecRegistry(pojoCodecRegistry)
 //                    .build();
             //MongoClient mongoClient = MongoClients.create(settings);
+
+            //Logger mongoLogger = LoggerFactory.getLogger( "org.mongodb.driver" );
+            //mongoLogger.setLevel(Level.OFF);
+
             MongoClient mongoClient = MongoClients.create();
+
             db = mongoClient.getDatabase("reef4");
         }
         return db;
@@ -477,7 +510,7 @@ public class genReef35 {
             while(cur.hasNext()) {
                 var doc = cur.next();
                 var cat = new ArrayList<>(doc.values());
-                genus_classification.addCat(cat.get(1).toString(), cat.get(2).toString(), overrideCat(cat.get(3).toString(), reefRef), cat.get(5).toString(), cat.get(4).toString());
+                genus_classification.addCat(cat.get(1).toString(), cat.get(2).toString(), overrideCat(cat.get(3).toString(), reefRef), cat.get(4).toString(), cat.get(5).toString());
                 //System.out.printf("%s/%s: %s,%s, %s%n", cat.get(1).toString(), cat.get(2).toString(), cat.get(3).toString(), cat.get(4).toString(), cat.get(5).toString());
             }
         }
@@ -501,6 +534,7 @@ public class genReef35 {
                 }
             }
         }
+        species_collection.validate();
 
         collection = db.getCollection("groups");
         try(MongoCursor<Document> cur = collection.find().iterator()) {
@@ -538,6 +572,10 @@ public class genReef35 {
         }
         if(reefRef == 5) {
             return comp.contains("California") || comp.contains("Baja") || comp.contains("Pacific Coast")
+                    || comp.contains("Circum") || comp.toLowerCase().contains("world");
+        }
+        if(reefRef == 6) {
+            return comp.contains("Polynesia")
                     || comp.contains("Circum") || comp.toLowerCase().contains("world");
         }
         return false;
@@ -593,9 +631,6 @@ public class genReef35 {
             genCatalogFiles(species_collection.getAllSpecies(), baseIndex, reefRef, headers[0]);
             for(var g : pageList) {
                 genIndexFile(baseIndex, g, reefRef, headers[headercount]);
-                if(++headercount == headers.length) {
-                    headercount = 0;
-                }
                 headercount = 0;
                 for(Species sp : g.species) {
                     genFishFile(sp, baseIndex, reefRef, headers[headercount], g);
@@ -612,7 +647,6 @@ public class genReef35 {
 
             }
 
-            String latestline;
             String date;
             var latest_list = species_collection.getLatest();
             var latestGroup = new page();
@@ -648,24 +682,23 @@ public class genReef35 {
         if(baseIndex.contains("clean")) {
             return;
         }
-        String area = reefId[region];
-
-       // db.getCollection("species_by_regions").deleteMany(new Document("region", area));
-      //  MongoCollection<Document> c = db.getCollection("species_by_regions");
-        String subcat;
         StringWriter writer = new StringWriter();
-        try(JsonGenerator gen = Json.createGenerator(writer)) {
-            gen.writeStartArray();
-            for(var sp : species_collection.getAllSpecies()) {
-               // c.insertOne(new Document("region", area).append("name", elem.name).append("cat", elem.cat).append("subCat", subcat));
-                gen.writeStartObject();
-                gen.write("name", sp.id).write("fullname", sp.name).write("sname", sp.sciName).write("subcategory", species_collection.getCat(sp.id))
-                        .write("category", genus_classification.getFamilyForGenus(sp.genus())).write("size", getSpNull(sp.size)).write("depth", getSpNull(sp.depth)).write("thumb1", sp.thumbs.get(0));
-                gen.writeEnd();
-            }
-            gen.writeEnd();
-            gen.flush();
+        JsonGenerator jsonGenerator = new JsonFactory().createGenerator(writer);
+        jsonGenerator.writeStartArray();
+        for(var sp : species_collection.getAllSpecies()) {
+            jsonGenerator.writeStartObject();
+            jsonGenerator.writeStringField("name", sp.id);
+            jsonGenerator.writeStringField("fullname", sp.name);
+            jsonGenerator.writeStringField("sname", sp.sciName);
+            jsonGenerator.writeStringField("subcategory", species_collection.getCat(sp.id));
+            jsonGenerator.writeStringField("category", genus_classification.getFamilyForGenus(sp.genus()));
+            jsonGenerator.writeStringField("size", getSpNull(sp.size));
+            jsonGenerator.writeStringField("depth", getSpNull(sp.depth));
+            jsonGenerator.writeNumberField("thumb1", sp.thumbs.get(0));
+            jsonGenerator.writeEndObject();
         }
+        jsonGenerator.writeEndArray();
+        jsonGenerator.flush();
         writer.flush();
         String json = writer.toString();
 
@@ -699,7 +732,7 @@ public class genReef35 {
             outString.append(sp.name).append("</title><link>http://reefguide.org/").append(sp.id).append(".html</link>");
             outString.append("<description>&lt;img src=\"http://reefguide.org/pix/thumb3/").append(sp.id).append(sp.thumbs.get(0)).append(".jpg\" /&gt;&lt;br /&gt;");
             outString.append(sp.name).append(" (").append(sp.sciName).append(")&lt;br /&gt;");
-            outString.append("Category: ").append(species_collection.getCat(sp.id)).append("&lt;br /&gt;");
+            outString.append("Category: ").append(species_collection.getCat(sp.id).replace("&", "&amp;")).append("&lt;br /&gt;");
             outString.append("Size: ").append(sp.size).append("&lt;br /&gt;");
             outString.append("Depth: ").append(sp.depth).append("&lt;br /&gt;");
             outString.append("Distribution: ").append(String.join(", ", sp.dist)).append("&lt;br /&gt;");
@@ -796,9 +829,7 @@ public class genReef35 {
         }
 
 
-        StringBuilder html = new StringBuilder();
-
-        outString = outString.replace("__INDEX_HTML__", html.toString());
+        outString = outString.replace("__INDEX_HTML__", "");
         outString = outString.replace("__TITLE__", " - " + subdir + " - Show all");
 
         writeToFile(outString, baseIndex + "/" + cat.replace(' ', '_') + ".html");
@@ -806,7 +837,7 @@ public class genReef35 {
 
     }
 
-    static String[] fishFile = new String[6];
+    static String[] fishFile = new String[numRegion];
     protected void genFishFile(Species sp, String baseIndex, int reefRef, String header, page group) throws IOException {
 
         if(fishFile[reefRef] == null) {
@@ -856,27 +887,33 @@ public class genReef35 {
         }
 
         String family = species_collection.getFamily(sp.id);
-        String f,catType;
+        String f="";
         var altCat = "";
         var cat = species_collection.getCat(sp.id());
         if(family != null) {
             f = family.split("/")[0];
-            catType = "Family";
-        } else {
+            //catType = "Family";
+        } //else {
             var c = species_collection.getAltCat(sp.id());
-            f="";
             altCat = c[0];
-            catType =  c[1];
-        }
+        String catType = c[1];
+        //}
 
         outString = outString.replace("__TITLE__", sp.name + " - " + sp.sciName + " - " + cat + " - " + sp.aka);
 
-        if(catType.equals("Family")) {
-            outString = outString.replace("__FAM__", "<span class=\"details\">" + catType + ": </span><span class=\"sntitle\">" + f + "</span>");
+        if(!f.equals("")) {
+            outString = outString.replace("__FAM__", "<span class=\"details\">" + "Family" + ": </span><span class=\"sntitle\">" + f + "</span>");
+            if(!altCat.isBlank()) {
+                outString = outString.replace("__HIGHER__", "<span class=\"details\">" + catType + ": </span><span class=\"sntitle\">" + altCat + "</span>");
+            }
+            else {
+                outString = outString.replace("__HIGHER__", "");
+            }
         } else {
             outString = outString.replace("__FAM__", "<span class=\"details\">" + catType + ": </span><span class=\"sntitle\">" + altCat + "</span>");
+            outString = outString.replace("__HIGHER__", "");
         }
-        if(catType.equals("Family") && family.contains("/")) {
+        if(family != null && family.contains("/")) {
             f = family.split("/")[1];
             outString = outString.replace("__SUBFAM__", "<span class=\"details\">" + "Subfamily" + ": </span><span class=\"sntitle\">" + f + "</span>");
         } else {
@@ -930,7 +967,9 @@ public class genReef35 {
                 String title = sp.name + " - " + sp.sciName + " - " + ph.location;
                 output.append("<img class=\"selframe\" src=\"").append(base).append("pix/thumb2/").append(thumbimg).append(".jpg\" alt=\"").append(title).append("\" title=\"").append(title).append("\"/></a>\n");
                 output.append(" <div class=\"main2\">").append(ph.location).append("</div>\n");
-                String comment = (ph.type == null ? "" : ph.type) + (ph.comment == null ? "&nbsp" : ph.comment);
+                String comment = (ph.type == null ? "" : ph.type)
+                        + ((ph.comment != null && ph.type != null ) ? " - " : "")
+                        + (ph.comment == null ? "&nbsp" : ph.comment);
                     output.append(" <div class=\"main3\">").append(comment).append("</div>\n");
 
             } else {
@@ -944,7 +983,6 @@ public class genReef35 {
                 }
                 if(!ph.location.isEmpty()) {
                     output.append(div).append("Location: ").append(ph.location);
-                    div = " / ";
                 }
                 output.append("</div>");
             }
@@ -988,7 +1026,7 @@ public class genReef35 {
         writeToFile(outString, baseIndex + "/" + sp.id + ".html");
     }
 
-    static String[] pixFile = new String[6];
+    static String[] pixFile = new String[numRegion];
     protected void genFishPixFile(Species sp, photo ph, String cat, String baseIndex, int reefRef, String banner) throws IOException {
         numPhotos++;
         String outString;
@@ -1090,9 +1128,12 @@ public class genReef35 {
             output.append(ph.comment);
             div = " / ";
         }
-        if(!ph.location.isBlank()) {
+        if(ph.location == null) {
+            System.out.println("Null Location for " + sp.id);
+            System.out.flush();
+        }
+        if(!Objects.requireNonNull(ph.location).isBlank()) {
             output.append(div).append("Location: ").append(ph.location);
-            div = " / ";
         }
         output.append("</div><br />");
 
@@ -1227,7 +1268,7 @@ public class genReef35 {
             StringBuilder html_frag = new StringBuilder();
 
             List<Species> finalSp_list = sp_list;
-            int index = pageList.stream().filter(g -> g.species.contains(finalSp_list.get(0))).findAny().orElse(null).index;
+            int index = pageList.stream().filter(g -> g.species.contains(finalSp_list.get(0))).findAny().orElseThrow().index;
 
             html_frag.append("<a href=\"").append("index").append(index).append(".html#").append(cat.replace(" ", "_")).append("\">\n");
             html_frag.append("<div class=\"famInfo\">\n");
@@ -1289,11 +1330,12 @@ public class genReef35 {
                                 page g,
                                 int reefRef,
                                 String header) throws IOException {
-        String indexName = "";
+        String indexName;
         if(g.index == -1)
             indexName = "latest.html";
-        else
+        else {
             indexName = "index" + g.index + ".html";
+        }
         String preReefString = "";
         if(preReefName[reefRef].length() > 0) {
             preReefString = "<span class=\"pretitle\">" + preReefName[reefRef] + "</span>";
@@ -1604,7 +1646,7 @@ public class genReef35 {
 
             if(!getSpeciesClass(species_collection.getCat(elem.species.get(0).id)).equals(speciesClass)) {
                 // New Family Header
-                if(!speciesClass.equals("")) {
+                if(!"".equals(speciesClass)) {
                     str.append("</ul></div>\n");
                 }
                 speciesClass = getSpeciesClass(species_collection.getCat(elem.species.get(0).id));
@@ -1703,7 +1745,8 @@ public class genReef35 {
 
     static String configpath = "/home/fc/web/reef4";
 
-    public static void main(String[] args) {
+    public static void main(String... args) {
+
 
         genReef35 reef = new genReef35();
         reef.basepathIndexAll = "/home/fc/web/reef4";
